force-app/main/default/objects/rh2__PS_Exception__c/rh2__PS_Exception__c.object-meta.xml
<CustomObject>
    <label>Rollup Helper Exception</label>
    <nameField>
        <displayFormat>Exception #{00000}</displayFormat>
        <label>Rollup Helper Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Helper Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>