force-app/main/default/objects/rh2__PS_Exception__c/fields/rh2__DML_Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>rh2__DML_Exception_Message__c</fullName>
    <description>The message reported from a DMLException, if any.</description>
    <label>DML Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>