force-app/main/default/objects/rh2__PS_Exception__c/fields/rh2__DML_Failed_Records_Count__c.field-meta.xml
<CustomField>
    <fullName>rh2__DML_Failed_Records_Count__c</fullName>
    <description>The count of failed records reported from a DMLException, if any.</description>
    <label>DML Number of Failed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>