force-app/main/default/objects/rh2__PS_Exception__c/fields/rh2__DML_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>rh2__DML_Status_Code__c</fullName>
    <description>The status code, if any, from a DML Exception.</description>
    <label>DML Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>