force-app/main/default/objects/rh2__PS_Exception__c/fields/rh2__Formatted_Date__c.field-meta.xml
<CustomField>
    <fullName>rh2__Formatted_Date__c</fullName>
    <description>Holds the date of the exception and displays it according to the users profile in local time.</description>
    <label>Formatted Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>