force-app/main/default/objects/rh2__PS_Exception__c/fields/rh2__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>rh2__Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>