force-app/main/default/objects/rh2__PS_Exception__c/fields/rh2__Potential_Affected_Target_Fields__c.field-meta.xml
<CustomField>
    <fullName>rh2__Potential_Affected_Target_Fields__c</fullName>
    <description>If any, the field(s) being processed when the error was encountered.</description>
    <label>Potentially Affected Target Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>