force-app/main/default/objects/rh2__PS_Exception__c/fields/rh2__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>rh2__Record_Id__c</fullName>
    <inlineHelpText>The ID of the record that experienced an exception.</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>