force-app/main/default/objects/rh2__PS_Exception__c/fields/rh2__Rollup_Link__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollup_Link__c</fullName>
    <formula>IF(!ISBLANK(rh2__Rollup_Name__c), HYPERLINK(&quot;/apex/PS_RollupType?s=&quot; &amp;  rh2__Rollup_Name__c, &quot;Link to the Rollup&quot;), &apos;No rollup link available.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rollup Link</label>
    <type>Text</type>
</CustomField>