force-app/main/default/objects/rh2__PS_Exception__c/fields/rh2__Rollup_Name__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollup_Name__c</fullName>
    <description>The name of the rollup setting that caused the error.</description>
    <label>Rollup Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>